@@ -17,6 +17,8 @@ CHANGELOG
 * FIxed on signup form double error messages.
 * Added check is safe_mode before call set_time_limit() function.
 * Added the action "coursepress_woocommerce_product_updated". This action has two variable $product_id and $course_id and is called after update product by CoursePress.
+* Fixed a wrong link to student profile from students tab on a course edit screen.
+* Improved link building to student profile in admin area.
 
 = 2.0.4 =
 -------------------------------------------------
